--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link href="https://css-al.s3.jp-tok.cloud-object-storage.appdomain.cloud/bootstrap.min.css" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="https://css-al.s3.jp-tok.cloud-object-storage.appdomain.cloud/blog4.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var canonicalLink = document.createElement('link');
+            canonicalLink.rel = 'canonical';
+            canonicalLink.href = window.location.href; // Lấy URL hiện tại của trang
+            document.head.appendChild(canonicalLink); // Thêm thẻ canonical vào thẻ head
+        });
+    </script>
    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
