--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <meta name="language" content="vi">
    <meta name="distribution" content="Global">
    <title>Fabet.homes - Địa chỉ website chính thức của Fabet 2024</title>
+    <meta name="google-site-verification" content="8j0FSQr3RINWda-kWgrSEHUk-dZTUKHYwqDeXbiKpsw" />
    <meta name="description" content="">
    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link href="https://css-al.s3.jp-tok.cloud-object-storage.appdomain.cloud/bootstrap.min.css" rel="stylesheet">
